--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
                         <a class="nav-link" href="./pages/noticias.html">Noticias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/login.html">Inicía sesion</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/register.html">Regístrate</a>
+                        <a class="nav-link" href="./galeria.html">Galeria</a>
                     </li>
                 </ul>
             </div>
