--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -29,10 +29,7 @@
                         <a class="nav-link" href="./noticias.html">Noticias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./login.html">Inicía sesion</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./register.html">Regístrate</a>
+                        <a class="nav-link" href="./galeria.html">Galeria</a>
                     </li>
                 </ul>
             </div>
