--- a/pages/productos.html
+++ b/pages/productos.html
@@ -29,10 +29,7 @@
                         <a class="nav-link" href="./noticias.html">Noticias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./login.html">Inicía sesion</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./register.html">Regístrate</a>
+                        <a class="nav-link" href="./galeria.html">Galeria</a>
                     </li>
                 </ul>
             </div>
@@ -40,7 +37,7 @@
     </header>
 
     <section class="center espacio">
-        <h2>Nuestros productos</h2>
+        <h2>Nuestros drones</h2>
     </section>
 
     <div class="container-fluid">
