--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="./pages/noticias.html">Noticias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./galeria.html">Galeria</a>
+                        <a class="nav-link" href="./pages/galeria.html">Galeria</a>
                     </li>
                 </ul>
             </div>
