--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <main>
         <div class="video-completo">
-            <video autoplay loop controls>
+            <video loop id="video-inicio">
                 <source src="./media/Alps4K.mp4" type="video/mp4">
             </video>
         </div>
@@ -75,5 +75,6 @@
     <script src="./js/jquery.min.js"></script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
