--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <main>
         <div class="video-completo">
-            <video loop id="video-inicio">
+            <video loop autoplay controls id="video-inicio">
                 <source src="./media/Alps4K.mp4" type="video/mp4">
             </video>
         </div>
