--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -87,7 +87,7 @@
 	        <div class="row">
 	            <div class="col-md-6 col-lg-4">
 	                <div class="card border-0 transform-on-hover">
-	                	<a class="lightbox" href="../img/">
+	                	<a class="lightbox" href="../img/photo1.jpg">
 	                		<img src="../img/photo1.jpg" alt="Card Image" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
