--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/fontawesome.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/d280693af6.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -65,10 +65,32 @@
         </section>
 
     </main>
-
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3083.4423834330737!2d-3.2240970842047045!3d39.391496579497534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd69af036cec6af9%3A0x3cb32e283081ecee!2sIES%20Juan%20Bosco!5e0!3m2!1ses!2ses!4v1583106138061!5m2!1ses!2ses" height="380" style="width:100%;" allowfullscreen=""></iframe>
     <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+        <div class="container pre-footer">
+            <div class="row">
+                <div class="redes-sociales col-sm-12 col-md-6 col-lg-5">
+                    <h2>Nuestras redes sociales</h2>
+                    <div class="redes">
+                        <a href="https://www.facebook.com/"><i class="fab fa-facebook-square fa-2x"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fab fa-instagram-square fa-2x"></i></a>
+                        <a href="https://twitter.com/"><i class="fab fa-twitter-square fa-2x"></i></a>
+                        <a href="http://www.iesjuanbosco.es/"><i class="fas fa-school fa-2x"></i></a>
+                    </div>
+                </div>
+                <div class="col-sm-0 col-md-0 col-lg-2"></div>
+                <div class="suscripcion col-sm-12 col-md-6 col-lg-5">
+                    <form action="mailto:juancho304@hotmail.es">
+                        <h2>Suscribete a nuestra pagina</h2>
+                        <label for="e-mail"></label>
+                        <input type="email" name="e-mail" id="e-mail" placeholder="Introduce tu correo">
+                        <input type="submit" value="Suscribirse">
+                    </form>
+                </div>
+            </div>
+        </div>
         <div class="container text-center">
-          <small>Copyright &copy; ToDrones</small>
+          <small>Copyright &copy; ToDrones By Juan P Rodriguez</small>
         </div>
     </footer>
 
