--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/baguetteBox.min.css">
+    <script src="https://kit.fontawesome.com/d280693af6.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -37,9 +38,6 @@
         </nav>
     </header>
 
-    <section class="center espacio">
-        <h2>Galeria</h2>
-    </section>
 
     <div class="gallery-intro container col-11">
       <div id="carousel-galeria" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
@@ -82,7 +80,7 @@
     <section class="gallery-block cards-gallery">
 	    <div class="container">
 	        <div class="heading">
-	          <h2>Cards Gallery</h2>
+	          <h2>Galeria</h2>
 	        </div>
 	        <div class="row">
 	            <div class="col-md-6 col-lg-4">
@@ -160,8 +158,30 @@
 
 
     <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+        <div class="container pre-footer">
+            <div class="row">
+                <div class="redes-sociales col-sm-12 col-md-6 col-lg-5">
+                    <h2>Nuestras redes sociales</h2>
+                    <div class="redes">
+                        <a href="https://www.facebook.com/"><i class="fab fa-facebook-square fa-2x"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fab fa-instagram-square fa-2x"></i></a>
+                        <a href="https://twitter.com/"><i class="fab fa-twitter-square fa-2x"></i></a>
+                        <a href="http://www.iesjuanbosco.es/"><i class="fas fa-school fa-2x"></i></a>
+                    </div>
+                </div>
+                <div class="col-sm-0 col-md-0 col-lg-2"></div>
+                <div class="suscripcion col-sm-12 col-md-6 col-lg-5">
+                    <form action="mailto:juancho304@hotmail.es">
+                        <h2>Suscribete a nuestra pagina</h2>
+                        <label for="e-mail"></label>
+                        <input type="email" name="e-mail" id="e-mail" placeholder="Introduce tu correo">
+                        <input type="submit" value="Suscribirse">
+                    </form>
+                </div>
+            </div>
+        </div>
         <div class="container text-center">
-            <small>Copyright &copy; ToDrones</small>
+          <small>Copyright &copy; ToDrones By Juan P Rodriguez</small>
         </div>
     </footer>
 
@@ -172,6 +192,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script>
         baguetteBox.run('.cards-gallery', { animation: 'slideIn'});
-    </script>s
+    </script>
 </body>
 </html>
