--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,7 @@
     <title>ToDrones - Productos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="../img/favicon.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/d280693af6.js" crossorigin="anonymous"></script>
