--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
                 <div class="suscripcion col-sm-12 col-md-6 col-lg-5">
                     <form action="mailto:juancho304@hotmail.es">
                         <h2>Suscribete a nuestra pagina</h2>
+                        <label for="name"></label>
+                        <input type="text" name="name" id="name" placeholder="Nombre">
                         <label for="e-mail"></label>
                         <input type="email" name="e-mail" id="e-mail" placeholder="Introduce tu correo">
+                        <label for="blog"></label>
+                        <input type="url" name="blog" id="blog" placeholder="Tu blog">
                         <input type="submit" value="Suscribirse">
                     </form>
                 </div>
