--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                     <form action="mailto:juancho304@hotmail.es">
                         <h2>Suscribete a nuestra pagina</h2>
                         <label for="name"></label>
-                        <input type="text" name="name" id="name" placeholder="Nombre">
+                        <input type="text" name="name" id="name" placeholder="Nombre"><br>
                         <label for="e-mail"></label>
-                        <input type="email" name="e-mail" id="e-mail" placeholder="Introduce tu correo">
+                        <input type="email" name="e-mail" id="e-mail" placeholder="Introduce tu correo"><br>
                         <label for="blog"></label>
-                        <input type="url" name="blog" id="blog" placeholder="Tu blog">
+                        <input type="url" name="blog" id="blog" placeholder="Tu blog"><br>
                         <input type="submit" value="Suscribirse">
                     </form>
                 </div>
