--- a/index.html
+++ b/index.html
@@ -84,11 +84,13 @@
                     <form action="mailto:juancho304@hotmail.es">
                         <h2>Suscribete a nuestra pagina</h2>
                         <label for="name"></label>
-                        <input type="text" name="name" id="name" placeholder="Nombre"><br>
+                        <input type="text" name="name" id="name" placeholder="Introduce tu nombre"><br>
                         <label for="e-mail"></label>
-                        <input type="email" name="e-mail" id="e-mail" placeholder="Introduce tu correo"><br>
+                        <input type="email" name="e-mail" id="e-mail" placeholder="Introduce tu correo" required><br>
                         <label for="blog"></label>
-                        <input type="url" name="blog" id="blog" placeholder="Tu blog"><br>
+                        <input type="url" name="blog" id="blog" placeholder="Introduce tu blog"><br>
+                        <label for="fNacimiento">Fecha de Nacimiento</label><br>
+                        <input type="date" name="fNacimiento" id="fNacimiento" required><br>
                         <input type="submit" value="Suscribirse">
                     </form>
                 </div>
