--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/d280693af6.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.evgnet.com/beacon/partnerminsait/jprodriguez/scripts/evergage.min.js"></script>
+    <script type="text/javascript" src="https://cdn.evgnet.com/beacon/partnerminsait/jprodriguez/scripts/evergage.min.js"></script>
 </head>
 <body>
     <header>
