--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/d280693af6.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdn.evgnet.com/beacon/partnerminsait/jprodriguez/scripts/evergage.min.js"></script>
 </head>
 <body>
     <header>
@@ -41,7 +40,7 @@
 
     <main>
         <div class="video-completo">
-            <video loop autoplay controls id="video-inicio">
+            <video loop autoplay <!-- controls --> id="video-inicio">
                 <source src="./media/Alps4K.mp4" type="video/mp4">
             </video>
         </div>
